--- a/etc/NEWS
+++ b/etc/NEWS
@@ -61,6 +61,9 @@ check that this option enables.
 lisp/ directory.  There should not be any there anyway.  If you have
 been adding them there, put them somewhere else, eg site-lisp.
 
+---
+** The `--no-site-lisp' command line option now works for Nextstep builds.
+
 
 * Changes in Emacs 24.2
 
