Stop ns builds setting the EMACSLOADPATH environment variable Ref bugs 4309, 6401, etc. This is the last environment variable (ab)used by the ns port in this way.
* src/nsterm.m (ns_load_path): Rename from ns_init_paths.
Now it does not set EMACSLOADPATH, just returns the load-path string.
* src/nsterm.h: Update accordingly.

* src/lread.c [HAVE_NS]: Include nsterm.h.
(init_lread) [HAVE_NS]: Use ns_load_path.

* src/emacs.c (main) [HAVE_NS]: No longer call ns_init_paths.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2012-07-10  Glenn Morris  <rgm@gnu.org>
+
+	Stop ns builds setting the EMACSLOADPATH environment variable.
+	* nsterm.m (ns_load_path): Rename from ns_init_paths.
+	Now it does not set EMACSLOADPATH, just returns the load-path string.
+	* nsterm.h: Update accordingly.
+	* lread.c [HAVE_NS]: Include nsterm.h.
+	(init_lread) [HAVE_NS]: Use ns_load_path.
+	* emacs.c (main) [HAVE_NS]: No longer call ns_init_paths.
+
 2012-07-09  Glenn Morris  <rgm@gnu.org>
 
 	* s/gnu.h (SIGNALS_VIA_CHARACTERS): No need to define it here,
