--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-10  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/authors.el (authors-fixed-entries):
+	(authors-renamed-files-alist): Update for configure.in -> configure.ac.
+
 2012-07-09  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Rename configure.in to configure.ac (Bug#11603).
