Move PENDING_OUTPUT_COUNT from src/s to configure
* configure.ac (PENDING_OUTPUT_COUNT): Move here from src/s.

* src/s/cygwin.h, src/s/darwin.h, src/s/freebsd.h, src/s/netbsd.h:
* src/s/unixware.h: Move PENDING_OUTPUT_COUNT definition to configure.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -11,6 +11,9 @@
 
 2012-07-10  Glenn Morris  <rgm@gnu.org>
 
+	* s/cygwin.h, s/darwin.h, s/freebsd.h, s/netbsd.h, s/unixware.h:
+	Move PENDING_OUTPUT_COUNT definition to configure.
+
 	* s/irix6-5.h (DATA_START, DATA_SEG_BITS):
 	* s/hpux10-20.h (DATA_SEG_BITS, DATA_START):
 	* s/gnu.h (DATA_START): Move definitions to configure.
