--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-07-10  Glenn Morris  <rgm@gnu.org>
 
-	* configure.ac (DATA_START, DATA_SEG_BITS): Move here from src/s.
+	* configure.ac (DATA_START, DATA_SEG_BITS, PENDING_OUTPUT_COUNT):
+	Move here from src/s.
 
 2012-07-09  Andreas Schwab  <schwab@linux-m68k.org>
 
