Avoid calls to strlen in miscellaneous functions. * buffer.c (init_buffer): Use precalculated len, adjust if needed. * font.c (Ffont_xlfd_name): Likewise.  Change to call make_string. * lread.c (openp): Likewise.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,11 +1,18 @@
 2012-07-10  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	Avoid calls to strlen in miscellaneous functions.
+	* buffer.c (init_buffer): Use precalculated len, adjust if needed.
+	* font.c (Ffont_xlfd_name): Likewise.  Change to call make_string.
+	* lread.c (openp): Likewise.
+
+2012-07-10  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Avoid calls to strlen in path processing functions.
 	* fileio.c (file_name_as_directory): Add comment.  Change to add
 	srclen argument and return the length of result.  Adjust users
 	accordingly.
 	(directory_file_name): Fix comment.  Change to add srclen argument,
-	swap 1nd and 2st arguments to obey the common convention.  Adjust
+	swap 1st and 2nd arguments to obey the common convention.  Adjust
 	users accordingly.
 	* filelock.c (fill_in_lock_file_name): Avoid calls to strlen.
 
