--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/pcase.el (pcase): Accept self-quoting exps as "upatterns".
+	(pcase--self-quoting-p): New function.
+	(pcase--u1): Use it.
+
 2012-07-10  Glenn Morris  <rgm@gnu.org>
 
 	* emacs-lisp/authors.el (authors-fixed-entries):
@@ -31,8 +37,8 @@
 2012-07-07  Chong Yidong  <cyd@gnu.org>
 
 	* simple.el (yank-pop-change-selection): Doc fix (Bug#11361).
-	(interprogram-cut-function, interprogram-paste-function): Mention
-	that we typically mean the clipboard.
+	(interprogram-cut-function, interprogram-paste-function):
+	Mention that we typically mean the clipboard.
 
 2012-07-06  Glenn Morris  <rgm@gnu.org>
 
@@ -71,8 +77,8 @@
 
 2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>
 
-	* calendar/cal-dst.el (calendar-current-time-zone): Return
-	calendar-current-time-zone-cache if non-nil.
+	* calendar/cal-dst.el (calendar-current-time-zone):
+	Return calendar-current-time-zone-cache if non-nil.
 
 2012-07-06  Glenn Morris  <rgm@gnu.org>
 
@@ -85,8 +91,8 @@
 	* net/tramp.el (tramp-drop-volume-letter): Provide an XEmacs
 	compatible declaration.
 
-	* net/tramp-cmds.el (tramp-append-tramp-buffers): Protect
-	`list-load-path-shadows' call.
+	* net/tramp-cmds.el (tramp-append-tramp-buffers):
+	Protect `list-load-path-shadows' call.
 
 	* net/tramp-compat.el (top): Require packages, which aren't
 	autoloaded anymore for XEmacs.  Protect call of
