--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* bzrmerge.el: Use cl-lib.
+
 2012-07-09  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Rename configure.in to configure.ac (Bug#11603).
@@ -30,8 +34,8 @@
 	* coccinelle: New subdirectory
 	* coccinelle/README: Documentation stub.
 	* coccinelle/vector_contents.cocci: Semantic patch to replace direct
-        access to `contents' member of Lisp_Vector objects with AREF and ASET
-        where appropriate.
+	access to `contents' member of Lisp_Vector objects with AREF and ASET
+	where appropriate.
 
 2012-06-22  Paul Eggert  <eggert@cs.ucla.edu>
 
@@ -50,9 +54,9 @@
 
 2012-06-13  Andreas Schwab  <schwab@linux-m68k.org>
 
-	* make-emacs: Rename --union-type to --check-lisp-type.  Define
-	CHECK_LISP_OBJECT_TYPE insted of USE_LISP_UNION_TYPE.
-	* CPP-DEFINES (DEBUG_LISP_OBJECT_TYPE): Renamed from
+	* make-emacs: Rename --union-type to --check-lisp-type.
+	Define CHECK_LISP_OBJECT_TYPE insted of USE_LISP_UNION_TYPE.
+	* CPP-DEFINES (DEBUG_LISP_OBJECT_TYPE): Rename from
 	USE_LISP_UNION_TYPE.
 
 2012-06-03  Glenn Morris  <rgm@gnu.org>
@@ -223,11 +227,11 @@
 
 	* unidata/makefile.w32-in (all): Remove src/biditype.h and
 	src/bidimirror.h.
-	(../../src/biditype.h, ../../src/bidimirror.h): Deleted.
+	(../../src/biditype.h, ../../src/bidimirror.h): Delete.
 
 	* unidata/Makefile.in (all): Remove src/biditype.h and
 	src/bidimirror.h.
-	(../../src/biditype.h, ../../src/bidimirror.h): Deleted.
+	(../../src/biditype.h, ../../src/bidimirror.h): Delete.
 
 2011-07-07  Juanma Barranquero  <lekktu@gmail.com>
 
@@ -238,8 +242,8 @@
 
 	* unidata/unidata-gen.el (unidata-dir): New variable.
 	(unidata-setup-list): Expand unidata-text-file in unidata-dir.
-	(unidata-prop-alist): INDEX element may be a function.  New
-	optional element VAL-LIST (for general-category and bidi-class).
+	(unidata-prop-alist): INDEX element may be a function.
+	New optional element VAL-LIST (for general-category and bidi-class).
 	New entry `mirroring'.
 	(unidata-prop-default, unidata-prop-val-list): New subst.
 	(unidata-get-character, unidata-put-character): Delete them.
@@ -595,13 +599,13 @@
 
 2009-04-17  Kenichi Handa  <handa@m17n.org>
 
-	* unidata/unidata-gen.el (unidata-get-decomposition): Adjust
-	Hangle decomposition rule to Unicode.
+	* unidata/unidata-gen.el (unidata-get-decomposition):
+	Adjust Hangle decomposition rule to Unicode.
 
 2009-04-09  Kenichi Handa  <handa@m17n.org>
 
-	* unidata/unidata-gen.el (unidata-describe-decomposition): Return
-	a string with a composition property to disable combining
+	* unidata/unidata-gen.el (unidata-describe-decomposition):
+	Return a string with a composition property to disable combining
 	characters being composed.
 
 2009-03-11  Miles Bader  <miles@gnu.org>
@@ -1096,7 +1100,7 @@
 
 2005-10-17  Bill Wohler  <wohler@newt.com>
 
-	* FOR-RELEASE (DOCUMENTATION): Removed lisp/toolbar from list
+	* FOR-RELEASE (DOCUMENTATION): Remove lisp/toolbar from list
 	since it's gone.  Also marked mh-e as done.
 
 2005-10-11  Juanma Barranquero  <lekktu@gmail.com>
@@ -1143,7 +1147,7 @@
 
 2005-03-30  Marcelo Toledo  <marcelo@marcelotoledo.org>
 
-	* FOR-RELEASE (Documentation): Added check the Emacs Tutorial.
+	* FOR-RELEASE (Documentation): Add check the Emacs Tutorial.
 	The first line of every tutorial must begin with a sentence saying
 	"Emacs Tutorial" in the respective language.  This should be
 	followed by "See end for copying conditions", likewise in the
