--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* eshell/esh-ext.el (eshell-remote-command): Remove remote part of
+	command, just in case.  The function is not needed anymore.
+	(eshell-external-command): Do not call `eshell-remote-command'.
+
 2012-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	Reduce use of (require 'cl).
