Use XCAR and XCDR instead of Fcar and Fcdr where possible. * admin/coccinelle/list_loop.cocci: Semantic patch to convert from Fcdr to XCDR and consistently use CONSP in the list iteration loops. * admin/coccinelle/vector_contents.cocci: Fix indentation. * src/callint.c, src/coding.c, src/doc.c, src/editfns.c, src/eval.c, * src/font.c, src/fontset.c, src/frame.c, src/gnutls.c, src/minibuf.c, * src/msdos.c, src/textprop.c, src/w32fns.c, src/w32menu.c, src/window.c, * src/xmenu.c: Changed to use XCAR and XCDR where argument type is known to be a Lisp_Cons.

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-10  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* coccinelle/list_loop.cocci: Semantic patch to convert from Fcdr
+	to XCDR and consistently use CONSP in the list iteration loops.
+	* coccinelle/vector_contents.cocci: Fix indentation.
+
 2012-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* bzrmerge.el: Use cl-lib.
