--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-07-10  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Use XCAR and XCDR instead of Fcar and Fcdr where possible.
+	* callint.c, coding.c, doc.c, editfns.c, eval.c, font.c, fontset.c,
+	* frame.c, gnutls.c, minibuf.c, msdos.c, textprop.c, w32fns.c,
+	* w32menu.c, window.c, xmenu.c: Changed to use XCAR and XCDR
+	where argument type is known to be a Lisp_Cons.
+
 2012-07-10  Tom Tromey  <tromey@redhat.com>
 
 	* bytecode.c (BYTE_CODE_THREADED): New macro.
