Let configure set DEFAULT_SOUND_DEVICE
* configure.ac (DEFAULT_SOUND_DEVICE): New definition.

* src/sound.c (DEFAULT_SOUND_DEVICE) [!WINDOWSNT]:
* src/s/netbsd.h (DEFAULT_SOUND_DEVICE): Let configure set it.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-11  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (DEFAULT_SOUND_DEVICE): New definition.
+
 2012-07-10  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Remove "#define unix" that is no longer needed (Bug#11905).
