--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Assume strerror.
+	* CPP-DEFINES (HAVE_STRERROR, strerror): Remove.
+
 2012-07-10  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* coccinelle/list_loop.cocci: Semantic patch to convert from Fcdr
