--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-11  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (GNU_LIBRARY_PENDING_OUTPUT_COUNT):
+	Move here from src/s.
+
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Assume rename, strerror.
