--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,7 +1,8 @@
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
-	Assume perror, rename, strerror.
-	* CPP-DEFINES (HAVE_PERROR, HAVE_RENAME, HAVE_STRERROR, strerror):
+	Assume mkdir, perror, rename, rmdir, strerror.
+	* CPP-DEFINES (HAVE_MKDIR, HAVE_PERROR, HAVE_RENAME, HAVE_RMDIR)
+	(HAVE_STRERROR, strerror):
 	Remove.
 
 2012-07-10  Dmitry Antipov  <dmantipov@yandex.ru>
