All the cool platforms support CLASH_DETECTION...
* configure.ac (CLASH_DETECTION): Define unconditionally.
Every platform using configure supports it.

* src/s/aix4-2.h, src/s/bsd-common.h, src/s/cygwin.h, src/s/darwin.h:
* src/s/gnu-linux.h, src/s/hpux10-20.h, src/s/template.h:
* src/s/usg5-4-common.h: Move CLASH_DETECTION to configure.

* etc/PROBLEMS: Recommend customizing create-lockfiles rather than
recompiling with CLASH_DETECTION unset.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
+	* configure.ac (CLASH_DETECTION): Define unconditionally.
+
 	* configure.ac (opsysfile): Use bsd-common on gnu systems.
 
 	* configure.ac (GNU_LIBRARY_PENDING_OUTPUT_COUNT):
