--- a/ChangeLog
+++ b/ChangeLog
@@ -9,7 +9,7 @@
 	* configure.ac (opsysfile): Use bsd-common on gnu systems.
 
 	* configure.ac (GNU_LIBRARY_PENDING_OUTPUT_COUNT):
-	Move here from src/s.
+	(SIGNALS_VIA_CHARACTERS): Move here from src/s.
 
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
