--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -14,6 +14,9 @@
 
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
+	* s/aix4-2.h, s/bsd-common.h, s/cygwin.h, s/gnu-linux.h:
+	* s/irix6-5.h: Move SIGNALS_VIA_CHARACTERS to configure.
+
 	* s/aix4-2.h, s/bsd-common.h, s/cygwin.h, s/darwin.h:
 	* s/gnu-linux.h, s/hpux10-20.h, s/template.h, s/usg5-4-common.h:
 	Move CLASH_DETECTION to configure.
