--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/ange-ftp.el (ange-ftp-cf1): Update the files cache.
+
 2012-07-11  Chong Yidong  <cyd@gnu.org>
 
 	* vc/log-edit.el (log-edit-vc-backend): New variable.
