Move INTERRUPT_INPUT from src/s to configure
* configure.ac (INTERRUPT_INPUT): Move here from src/s.

* src/s/darwin.h, src/s/gnu-linux.h, src/s/template.h:
Move INTERRUPT_INPUT to configure.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-11  Glenn Morris  <rgm@gnu.org>
+
+	* s/darwin.h, s/gnu-linux.h, s/template.h:
+	Move INTERRUPT_INPUT to configure.
+
 2012-07-11  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Minor adjustments to interning code.
