--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-11  Glenn Morris  <rgm@gnu.org>
+
+	* configure.ac (INTERRUPT_INPUT): Move here from src/s.
+
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* configure.ac (tzset): Remove check that's redundant with gnulib.
