All platforms using configure support HAVE_PTYS and HAVE_SOCKETS
* configure.ac (HAVE_PTYS, HAVE_SOCKETS): Define unconditionally.

* src/s/aix4-2.h, src/s/bsd-common.h, src/s/cygwin.h, src/s/darwin.h:
* src/s/gnu-linux.h, src/s/hpux10-20.h, src/s/template.h:
* src/s/usg5-4-common.h: Move HAVE_PTYS and HAVE_SOCKETS to configure.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2012-07-11  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac (INTERRUPT_INPUT): Move here from src/s.
+	(HAVE_PTYS, HAVE_SOCKETS): Define unconditionally.
 
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
