--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-11  Glenn Morris  <rgm@gnu.org>
+
+	* s/aix4-2.h, s/bsd-common.h, s/cygwin.h, s/darwin.h, s/gnu-linux.h:
+	* s/hpux10-20.h, s/template.h, s/usg5-4-common.h:
+	Move HAVE_PTYS and HAVE_SOCKETS to configure.
+
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* s/sol2-6.h (HAVE_LIBKSTAT): Remove.  (Bug#11914)
